--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aacsl-web",
+  "name": "athena-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.32.6",
-    "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
+    "@types/node": "20.5.0",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
-    "eslint": "^8.44.0",
-    "eslint-config-next": "^13.4.9",
-    "next": "^13.4.16",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.17",
+    "next": "13.4.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.7",
