--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.5",
     "styled-components": "^6.0.7",
     "typescript": "5.1.6",
     "zustand": "^4.4.1"
@@ -28,8 +29,5 @@
     "babel-plugin-styled-components": "^2.1.4",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^3.0.0"
-  },
-  "resolutions": {
-    "styled-components": "^5"
   }
 }
