--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -19,6 +20,7 @@
     "next": "13.4.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "8.0.3",
     "sharp": "^0.32.5",
     "styled-components": "^6.0.7",
     "typescript": "5.1.6",
