--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.17",
     "next": "13.4.17",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.5",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@types/react-datepicker": "^4.15.0",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^3.0.0"
